--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.0.2",
     "lucide-react": "^0.371.0",
     "next": "14.2.2",
     "react": "^18",
