--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^3.0.2",
+    "@tanstack/react-query": "^5.31.0",
+    "@tanstack/react-query-devtools": "^5.31.0",
+    "@tanstack/react-query-next-experimental": "^5.31.0",
     "lucide-react": "^0.371.0",
     "next": "14.2.2",
+    "node": "^18.20.2",
     "react": "^18",
     "react-dom": "^18"
   },
