--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@tanstack/react-query": "^5.31.0",
     "@tanstack/react-query-devtools": "^5.31.0",
     "@tanstack/react-query-next-experimental": "^5.31.0",
+    "jotai": "^2.8.0",
     "lucide-react": "^0.371.0",
     "next": "14.2.2",
     "node": "^18.20.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3"
   },
   "devDependencies": {
     "@types/node": "^20",
